--- a/package.json
+++ b/package.json
@@ -3,13 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/data-grid": "^4.0.0-alpha.37",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@mui/material": "^5.2.2",
+    "@mui/system": "^5.2.2",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
+    "formik": "^2.2.9",
+    "html-entities": "^2.3.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
+    "react-notification-alert": "0.0.13",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "reactstrap": "^9.0.1",
+    "recharts": "^2.1.6",
+    "redux": "^4.1.2",
+    "web-vitals": "^1.1.2",
+    "yarn": "^1.22.17",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
